@@ -62,6 +62,7 @@ tasks {
         setForkEvery(1)
         maxParallelForks = Runtime.getRuntime().availableProcessors()
 
+        val jdk17: String by project
         val jdk16: String by project
         val jdk15: String by project
         val jdk14: String by project
@@ -72,7 +73,10 @@ tasks {
         val jdk9: String by project
         val jdk8: String by project
 
-        if (project.hasProperty("test16")) {
+        if (project.hasProperty("test17")) {
+            executable = "$jdk17/bin/java"
+            jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+        } else if (project.hasProperty("test16")) {
             executable = "$jdk16/bin/java"
             jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
         } else if (project.hasProperty("test15")) {
